<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/enterRouteScrollView"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:foreground="@color/black_overlay"    android:scrollbars="vertical" >    <LinearLayout        android:layout_width="match_parent"        android:layout_height="348dp"        android:orientation="vertical" >        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content" >            <EditText                android:id="@+id/er_startLocation"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:ems="10"                android:hint="@string/erStartLocation" />            <Button                android:id="@+id/er_startLocationMap"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/er_startLocationBtn" />        </LinearLayout>        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content" >            <EditText                android:id="@+id/er_endLocation"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:ems="10"                android:hint="@string/er_endLocation" />            <Button                android:id="@+id/er_endLoactionMap"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/er_startLocationBtn" />        </LinearLayout>        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="match_parent" >            <EditText                android:id="@+id/er_startDate"                android:layout_width="210dp"                android:layout_height="wrap_content"                android:hint="@string/er_startDateTx"                android:inputType="date" >                <requestFocus />            </EditText>        </LinearLayout>        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="match_parent" >            <EditText                android:id="@+id/er_startTime"                android:layout_width="210dp"                android:layout_height="wrap_content"                android:layout_weight="1"                android:ems="10"                android:hint="@string/er_startTimeTx"                android:inputType="time" />        </LinearLayout>        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="match_parent" >            <RadioGroup                android:id="@+id/radioGroup1"                android:layout_width="wrap_content"                android:layout_height="60dp"                android:contentDescription="@string/er_driverTravelerRbg"                android:orientation="vertical" >                <RadioButton                    android:id="@+id/radio0"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:checked="true"                    android:text="@string/er_iAmDriver" />                <RadioButton                    android:id="@+id/radio1"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:contentDescription="@string/er_driverTravelerRbg"                    android:text="@string/er_iAmTraveler" />            </RadioGroup>        </LinearLayout>        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <View            android:layout_width="1dp"            android:layout_height="30dp" >        </View>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content" >            <Button                android:id="@+id/button1"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_weight="0.39"                android:hint="@string/er_continueBtn"                android:text="@string/er_continueBtn" />        </LinearLayout>    </LinearLayout></ScrollView>