<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PretragaActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/pretraga"
         />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:text="@string/cilj" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/EditText01"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"/>
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:ems="10"
        android:text="@string/polaziste" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="96dp"
        android:src="@drawable/ic_launcher" />

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_toRightOf="@+id/EditText01"
        android:maxHeight="50dp"
        android:maxWidth="10dp"
        android:src="@drawable/ic_launcher" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/TextView01"
        android:maxHeight="50dp"
        android:maxWidth="10dp"
        android:src="@drawable/ic_launcher" />

    <ImageButton
        android:id="@+id/endButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startButton"
        android:layout_below="@+id/startButton"
        android:maxHeight="50dp"
        android:maxWidth="10dp"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>